Example filter pipeline.

--- a/docker-elk/logstash/pipeline/logstash.conf
+++ b/docker-elk/logstash/pipeline/logstash.conf
@@ -4,10 +4,26 @@ input {
 	}
 }
 
-## Add your filters / logstash plugins configuration here
+filter {
+	csv {
+		columns => [
+			"DR Number","Date Reported","Date Occurred","Time Occurred",
+			"Area ID","Area Name","Reporting District","Crime Code",
+			"Crime Code Description","MO Codes","Victim Age","Victim Sex",
+			"Victim Descent","Premise Code","Premise Description"
+			,"Weapon Used Code","Weapon Description","Status Code"
+			,"Status Description","Crime Code 1","Crime Code 2",
+			"Crime Code 3","Crime Code 4","Address","Cross Street","Location"
+		]
+	}
+}
 
 output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
+		index => "test"
 	}
+	# file {
+	# 	path => "/usr/share/logstash/test.txt"
+	# }
 }
